--- a/pom.xml
+++ b/pom.xml
@@ -379,6 +379,11 @@
                             <phase>generate-sources</phase>
                             <configuration>
                                 <target>
+                                    <mkdir dir="${project.build.directory}/generated-sources/repositories"/>
+                                    <move todir="${project.build.directory}/generated-sources/repositories">
+                                        <fileset dir="${project.basedir}/src/main/java"
+                                                 includes="**/repository/*.java"/>
+                                    </move>
                                     <property name="maven.project.build.directory" value="${project.build.directory}"/>
                                     <property name="maven.project.basedir" value="${project.basedir}"/>
                                     <ant antfile="build.xml" target="amendEntities"/>
