--- a/sample-mono/pom.xml
+++ b/sample-mono/pom.xml
@@ -712,6 +712,11 @@
         </profile>
         <profile>
             <id>coverage</id>
+            <properties>
+                <sonar.coverage.jacoco.xmlReportPaths>
+                    ${project.basedir}/../report-aggregate/target/site/jacoco-aggregate/jacoco.xml
+                </sonar.coverage.jacoco.xmlReportPaths>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
