update coverage path

--- a/modules/row-limiter/pom.xml
+++ b/modules/row-limiter/pom.xml
@@ -53,7 +53,7 @@
             <id>coverage</id>
             <properties>
                 <sonar.coverage.jacoco.xmlReportPaths>
-                    ${project.basedir}/../report-aggregate/target/site/jacoco-aggregate/jacoco.xml
+                    ${project.basedir}/../../report-aggregate/target/site/jacoco-aggregate/jacoco.xml
                 </sonar.coverage.jacoco.xmlReportPaths>
             </properties>
             <build>
