ignore license comment rule

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=OsgiliathEnterprise_data-migrator
 sonar.projectName=Data migrator project
 sonar.projectVersion=1.0
-sonar.issue.ignore.multicriteria=S125
+sonar.issue.ignore.multicriteria=S125,J125
 sonar.issue.ignore.multicriteria.S125.resourceKey=**/*
 sonar.issue.ignore.multicriteria.S125.ruleKey=xml:S125
+sonar.issue.ignore.multicriteria.J125.resourceKey=**/*
+sonar.issue.ignore.multicriteria.J125.ruleKey=java:S125
