start of a remote engine

--- a/sample-mono/src/main/resources/application.yml
+++ b/sample-mono/src/main/resources/application.yml
@@ -32,6 +32,9 @@ data-migrator:
       entity-class: Country
   graph-datasource:
     type: embedded
+    #type: remote
+#    port: 8182
+#    host: 127.0.0.1
 spring:
   main:
     lazy-initialization: true
