--- a/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/application.yml
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/application.yml
@@ -25,6 +25,9 @@ data-migrator:
   #      entity-class: Country
   graph-datasource:
     type: embedded
+    #    type: remote
+    #    port: 8182
+    #    host: 127.0.0.1
 spring:
   main:
     lazy-initialization: true
@@ -54,8 +57,8 @@ spring:
         generate_statistics: false
         # modify batch size as necessary
         jdbc:
-          batch_size: 25
-          fetch_size: 150
+          batch_size: 25 # tweak it to improve the perf
+          fetch_size: 150 # should be removed for PG & Mysql, tweak it to improve the perf
           time_zone: UTC
         order_inserts: true
         order_updates: true
