--- a/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/application.yml
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/application.yml
@@ -57,8 +57,8 @@ spring:
         generate_statistics: false
         # modify batch size as necessary
         jdbc:
-          batch_size: 25 # tweak it to improve the perf
-          fetch_size: 150 # should be removed for PG & Mysql, tweak it to improve the perf
+          batch_size: 10000 # tweak it to improve the perf
+          fetch_size: 10000 # should be removed for PG & Mysql, tweak it to improve the perf
           time_zone: UTC
         order_inserts: true
         order_updates: true
@@ -71,6 +71,8 @@ spring:
           provider_disables_autocommit: true
           autocommit: false
           provider_class: org.hibernate.hikaricp.internal.HikariCPConnectionProvider
+        hbm2ddl:
+          auto: update
   datasource:
     source:
       type: com.zaxxer.hikari.HikariDataSource
