--- a/sample-mono/pom.xml
+++ b/sample-mono/pom.xml
@@ -367,14 +367,14 @@
                         <artifactId>liquibase-maven-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>generate-entities</id>
+                                <id>update-source-db</id>
                                 <phase>generate-sources</phase>
                                 <goals>
                                     <goal>update</goal>
                                 </goals>
                                 <configuration>
                                     <changeLogFile>/config/liquibase/master.xml</changeLogFile>
-                                    <contexts>test</contexts>
+                                    <contexts>test,faker</contexts>
                                 </configuration>
                             </execution>
                         </executions>
