--- a/sample-mono/src/test/resources/application.yml
+++ b/sample-mono/src/test/resources/application.yml
@@ -71,8 +71,8 @@ spring:
         generate_statistics: false
         # modify batch size as necessary
         jdbc:
-          batch_size: 25
-          fetch_size: 150
+          batch_size: 10000
+          fetch_size: 10000
           time_zone: UTC
         order_inserts: true
         order_updates: true
@@ -85,6 +85,8 @@ spring:
           provider_disables_autocommit: true
           autocommit: false
           provider_class: org.hibernate.hikaricp.internal.HikariCPConnectionProvider
+        hbm2ddl:
+          auto: update
   datasource:
     hikari:
       auto-commit: false
