--- a/sample-mono/pom.xml
+++ b/sample-mono/pom.xml
@@ -154,7 +154,7 @@
                         </goals>
                         <configuration>
                             <files>
-                                <file>${basedir}/database.properties</file>
+                                <file>${project.basedir}/database.properties</file>
                             </files>
                         </configuration>
                     </execution>
