--- a/sample-mono/src/main/resources/application.yml
+++ b/sample-mono/src/main/resources/application.yml
@@ -44,11 +44,57 @@ spring:
       properties:
         hibernate:
           dialect: @source.jdbc.dialect@
+          id.new_generator_mappings: true
+          #        cache:
+          #          use_second_level_cache: true
+          #          use_query_cache: false
+          #          region.factory_class: jcache
+          generate_statistics: false
+          # modify batch size as necessary
+          jdbc:
+            batch_size: 10000
+            fetch_size: 10000
+            time_zone: UTC
+          order_inserts: true
+          order_updates: true
+          # modify fetch size as necessary
+          criteria.literal_handling_mode: BIND
+          query:
+            fail_on_pagination_over_collection_fetch: true
+            in_clause_parameter_padding: true
+          connection:
+            provider_disables_autocommit: true
+            autocommit: false
+            provider_class: org.hibernate.hikaricp.internal.HikariCPConnectionProvider
     sink:
       generate-ddl: true
       properties:
         hibernate:
           dialect: @target.jdbc.dialect@
+          id.new_generator_mappings: true
+          #        cache:
+          #          use_second_level_cache: true
+          #          use_query_cache: false
+          #          region.factory_class: jcache
+          generate_statistics: false
+          # modify batch size as necessary
+          jdbc:
+            batch_size: 10000
+            fetch_size: 10000
+            time_zone: UTC
+          order_inserts: true
+          order_updates: true
+          # modify fetch size as necessary
+          criteria.literal_handling_mode: BIND
+          query:
+            fail_on_pagination_over_collection_fetch: true
+            in_clause_parameter_padding: true
+          connection:
+            provider_disables_autocommit: true
+            autocommit: false
+            provider_class: org.hibernate.hikaricp.internal.HikariCPConnectionProvider
+          hbm2ddl:
+            auto: update
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
