--- a/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/application.yml
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/application.yml
@@ -31,6 +31,9 @@ data-migrator:
 spring:
   main:
     lazy-initialization: true
+  devtools:
+    restart:
+      enabled: false
   jpa:
     source:
       generate-ddl: false
