--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.osgiliath.datamigrator</groupId>
@@ -44,7 +45,7 @@
                 <artifactId>mysql-connector-j</artifactId>
                 <version>${jdbc.mysql.version}</version>
             </dependency>
-             <dependency>
+            <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${jdbc.postgresql.version}</version>
@@ -55,16 +56,16 @@
                 <version>${jdbc.oracle.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.orm</groupId>
                 <artifactId>hibernate-jpamodelgen</artifactId>
                 <version>${hibernate.version}</version>
             </dependency>
-             <dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
-                 <scope>import</scope>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel.springboot</groupId>
@@ -94,7 +95,7 @@
                 <version>${testcontainers.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.orm</groupId>
                 <artifactId>hibernate-jcache</artifactId>
                 <version>${hibernate.version}</version>
             </dependency>
@@ -120,14 +121,14 @@
                 <version>${liquibase.version}</version>
             </dependency>
             <dependency>
-               <groupId>org.apache.tinkerpop</groupId>
-               <artifactId>gremlin-driver</artifactId>
-               <version>${tinkerpop.version}</version>
+                <groupId>org.apache.tinkerpop</groupId>
+                <artifactId>gremlin-driver</artifactId>
+                <version>${tinkerpop.version}</version>
             </dependency>
             <dependency>
-               <groupId>org.apache.tinkerpop</groupId>
-               <artifactId>tinkergraph-gremlin</artifactId>
-               <version>${tinkerpop.version}</version>
+                <groupId>org.apache.tinkerpop</groupId>
+                <artifactId>tinkergraph-gremlin</artifactId>
+                <version>${tinkerpop.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.querydsl</groupId>
@@ -148,9 +149,9 @@
                 <version>${hibernate.version}</version>
             </dependency>
             <dependency>
-               <groupId>javax.transaction</groupId>
-               <artifactId>jta</artifactId>
-               <version>1.1</version>
+                <groupId>javax.transaction</groupId>
+                <artifactId>jta</artifactId>
+                <version>1.1</version>
             </dependency>
             <dependency>
                 <groupId>jakarta.persistence</groupId>
@@ -166,9 +167,9 @@
     </dependencyManagement>
     <profiles>
         <profile>
-			<id>release</id>
-			<build>
-				<plugins>
+            <id>release</id>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -177,12 +178,12 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
                     </plugin>
-					<plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
