--- a/sample-mono/src/test/resources/application.yml
+++ b/sample-mono/src/test/resources/application.yml
@@ -40,6 +40,9 @@ data-migrator:
   graph-datasource:
     type: embedded
 spring:
+  threads:
+    virtual:
+      enabled: true
   profiles:
     active: test
   main:
