--- a/sample-mono/src/test/resources/application.yml
+++ b/sample-mono/src/test/resources/application.yml
@@ -40,9 +40,9 @@ data-migrator:
   graph-datasource:
     type: embedded
 spring:
-  threads:
-    virtual:
-      enabled: true
+  #  threads:
+  #    virtual:
+  #      enabled: true
   profiles:
     active: test
   main:
@@ -51,6 +51,7 @@ spring:
     source:
       properties:
         hibernate:
+          enable_lazy_load_no_trans: true
           dialect: org.hibernate.dialect.MySQLDialect
           #        cache:
           #          use_second_level_cache: true
@@ -69,6 +70,7 @@ spring:
     sink:
       properties:
         hibernate:
+          enable_lazy_load_no_trans: true
           dialect: org.hibernate.dialect.MySQLDialect
           id.new_generator_mappings: true
           #        cache:
