--- a/sample-mono/src/main/resources/application.yml
+++ b/sample-mono/src/main/resources/application.yml
@@ -64,7 +64,7 @@ spring:
     sink:
       properties:
         hibernate:
-          enable_lazy_load_no_trans: true
+          # enable_lazy_load_no_trans: true
           dialect: @target.jdbc.dialect@
           id.new_generator_mappings: true
           #        cache:
