--- a/sample-mono/build.xml
+++ b/sample-mono/build.xml
@@ -1,6 +1,10 @@
 <project name="EntityPostProcessor" default="dist" basedir=".">
     <description>Post process the entities</description>
     <target name="amendEntities">
+        <replace token='precision=19' value='precision=9'
+                 dir="${maven.project.build.directory}">
+            <include name="**/*.java"/>
+        </replace>
         <replace token=', nullable=false' value='' dir="${maven.project.build.directory}">
             <include name="**/*.java"/>
         </replace>
@@ -119,6 +123,7 @@
                 <include name="**/*.java"/>
             </fileset>
         </replaceregexp>
+
         <replaceregexp flags="gm">
             <regexp pattern="(@AttributeOverride\(name\s*=\s*&quot;((?:(?!&quot;).)+)&quot;, .*name\s*=\s*&quot;((?:(?!&quot;).)+)&quot;(?:(?!^\s+@JoinColumn)[^£])*)(^\s*\@JoinColumn\(name\s*=\s*&quot;\3)"/>
             <substitution expression="\1@jakarta.persistence.MapsId(&quot;\2&quot;) \4"/>
@@ -126,6 +131,5 @@
                 <include name="**/*.java"/>
             </fileset>
         </replaceregexp>
-
     </target>
 </project>
